@@ -32,7 +32,7 @@ public abstract class EntityRenderer {
 	public void update(float delta) { elapsedTime += delta; }
 	//public void reset() { elapsedTime = 0; }
 	
-	public abstract void render(float x, float y, Batch batch);
+	public abstract void render(float x, float y, Batch batch, boolean swim);
 	
 	public abstract Vector2 getSize();
 	
@@ -65,7 +65,7 @@ public abstract class EntityRenderer {
 		public String getName() { return spriteName; }
 		
 		@Override
-		public void render(float x, float y, Batch batch) { batch.draw(sprite.texture, x, y); }
+		public void render(float x, float y, Batch batch, boolean swim) { batch.draw(sprite.texture.split(sprite.width, swim?sprite.height/2:sprite.height)[0][0], x, y); }
 		
 		@Override
 		public Vector2 getSize() { return new Vector2(sprite.width, sprite.height); }
@@ -129,8 +129,9 @@ public abstract class EntityRenderer {
 		private TextureHolder getSprite() { return animation.getKeyFrame(super.elapsedTime, loopAnimation); }
 		
 		@Override
-		public void render(float x, float y, Batch batch) {
-			batch.draw(getSprite().texture, x, y);
+		public void render(float x, float y, Batch batch, boolean swim) {
+			TextureHolder sprite = getSprite();
+			batch.draw(sprite.texture.split(sprite.width, swim?sprite.height/2:sprite.height)[0][0], x, y); // TODO make new TextureRegion that only draws the upper half of the sprite when swim is true; or, find a way to clip off the bottom of the sprite. Possibly using render modes..?
 		}
 		
 		@Override
@@ -187,10 +188,10 @@ public abstract class EntityRenderer {
 		public void setDirection(@NotNull Direction dir) { this.dir = dir; }
 		
 		@Override
-		public void render(float x, float y, Batch batch) {
+		public void render(float x, float y, Batch batch, boolean swim) {
 			AnimationRenderer renderer = animations.get(dir);
 			((EntityRenderer)renderer).elapsedTime = super.elapsedTime;
-			renderer.render(x, y, batch);
+			renderer.render(x, y, batch, swim);
 		}
 		
 		@Override
@@ -223,7 +224,7 @@ public abstract class EntityRenderer {
 		protected String[] save() { return new String[] {text, main.toString(), shadow.toString()}; }
 		
 		@Override
-		public void render(float x, float y, Batch batch) {
+		public void render(float x, float y, Batch batch, boolean swim) {
 			BitmapFont font = GameCore.getFont();
 			font.setColor(shadow);
 			font.draw(batch, text, x-1, y+1, 0, Align.center, false);
@@ -281,9 +282,9 @@ public abstract class EntityRenderer {
 		}
 		
 		@Override
-		public void render(float x, float y, Batch batch) {
+		public void render(float x, float y, Batch batch, boolean swim) {
 			if(!blinkerActive() || blinker.shouldRender())
-				mainRenderer.render(x, y, batch);
+				mainRenderer.render(x, y, batch, swim);
 		}
 		
 		@Override
@@ -292,7 +293,7 @@ public abstract class EntityRenderer {
 	
 	
 	public static final EntityRenderer BLANK = new EntityRenderer() {
-		@Override public void render(float x, float y, Batch batch) {}
+		@Override public void render(float x, float y, Batch batch, boolean swim) {}
 		@Override public Vector2 getSize() { return new Vector2(); }
 		@Override protected String[] save() { return new String[0]; }
 	};
