@@ -1,5 +1,7 @@
 package miniventure.game.world.tile;
 
+import miniventure.game.world.WorldManager;
+
 import com.badlogic.gdx.graphics.g2d.Animation;
 import com.badlogic.gdx.utils.Array;
 
@@ -10,8 +12,7 @@ public class TileAnimation<T> extends Animation<T> {
 	private float startTime = -1;
 	
 	public TileAnimation(boolean sync, float frameDuration, Array<? extends T> keyFrames) {
-		super(frameDuration, keyFrames);
-		if(sync) startTime = 0;
+		this(sync, frameDuration, keyFrames, PlayMode.LOOP);
 	}
 	
 	public TileAnimation(boolean sync, float frameDuration, Array<? extends T> keyFrames, PlayMode playMode) {
@@ -25,8 +26,8 @@ public class TileAnimation<T> extends Animation<T> {
 		if(sync) startTime = 0;
 	}
 	
-	public T getKeyFrame(@NotNull Tile tile) {
-		float time = tile.getWorld().getGameTime();
+	public T getKeyFrame(@NotNull WorldManager world) {
+		float time = world.getGameTime();
 		if(startTime < 0)
 			startTime = time;
 		
